// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps > Snapshots > should match snapshot for horizontal steps 1`] = `
<div
  class="tiger-steps w-full flex flex-row items-start"
>
  <div
    class="tiger-step-item relative flex flex-col flex-1"
    islast="false"
    stepindex="0"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
    >
      <svg
        class="w-5 h-5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13l4 4L19 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="tiger-step-tail transition-all duration-200 flex-1 h-0.5 mx-2 mt-5 bg-[var(--tiger-primary,#2563eb)]"
    />
    <div
      class="tiger-step-content mt-2 "
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 1
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-600"
      >
        First step
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-col flex-1"
    islast="false"
    stepindex="1"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
    >
      2
    </div>
    <div
      class="tiger-step-tail transition-all duration-200 flex-1 h-0.5 mx-2 mt-5 bg-gray-300"
    />
    <div
      class="tiger-step-content mt-2 "
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 2
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-600"
      >
        Second step
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-col flex-1"
    islast="true"
    stepindex="2"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-gray-100 border-gray-300 text-gray-400"
    >
      3
    </div>
    <div
      class="hidden"
    />
    <div
      class="tiger-step-content mt-2 "
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-400 "
      >
        Step 3
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-400"
      >
        Third step
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps > Snapshots > should match snapshot for simple mode 1`] = `
<div
  class="tiger-steps w-full flex flex-row items-start"
>
  <div
    class="tiger-step-item relative flex flex-col flex-1 items-center"
    islast="false"
    stepindex="0"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-6 h-6 text-xs font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
    >
      <svg
        class="w-5 h-5"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13l4 4L19 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="tiger-step-tail transition-all duration-200 flex-1 h-0.5 mx-2 mt-5 bg-[var(--tiger-primary,#2563eb)]"
    />
    <div
      class="tiger-step-content mt-2 text-center"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 1
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-col flex-1 items-center"
    islast="false"
    stepindex="1"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-6 h-6 text-xs font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
    >
      2
    </div>
    <div
      class="tiger-step-tail transition-all duration-200 flex-1 h-0.5 mx-2 mt-5 bg-gray-300"
    />
    <div
      class="tiger-step-content mt-2 text-center"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 2
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-col flex-1 items-center"
    islast="true"
    stepindex="2"
  >
    <div
      class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-6 h-6 text-xs font-medium bg-gray-100 border-gray-300 text-gray-400"
    >
      3
    </div>
    <div
      class="hidden"
    />
    <div
      class="tiger-step-content mt-2 text-center"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-400 "
      >
        Step 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps > Snapshots > should match snapshot for vertical steps 1`] = `
<div
  class="tiger-steps w-full flex flex-col"
>
  <div
    class="tiger-step-item relative flex flex-row pb-6"
    islast="false"
    stepindex="0"
  >
    <div
      class="relative"
    >
      <div
        class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M5 13l4 4L19 7"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </div>
      <div
        class="tiger-step-tail transition-all duration-200 absolute left-4 top-10 w-0.5 h-full bg-[var(--tiger-primary,#2563eb)]"
      />
    </div>
    <div
      class="tiger-step-content ml-4 flex-1"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 1
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-600"
      >
        First step
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-row pb-6"
    islast="false"
    stepindex="1"
  >
    <div
      class="relative"
    >
      <div
        class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-[var(--tiger-primary,#2563eb)] border-[var(--tiger-primary,#2563eb)] text-white"
      >
        2
      </div>
      <div
        class="tiger-step-tail transition-all duration-200 absolute left-4 top-10 w-0.5 h-full bg-gray-300"
      />
    </div>
    <div
      class="tiger-step-content ml-4 flex-1"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-900 "
      >
        Step 2
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-600"
      >
        Second step
      </div>
    </div>
  </div>
  <div
    class="tiger-step-item relative flex flex-row"
    islast="true"
    stepindex="2"
  >
    <div
      class="relative"
    >
      <div
        class="tiger-step-icon flex items-center justify-center rounded-full border-2 transition-all duration-200 w-10 h-10 text-base font-medium bg-gray-100 border-gray-300 text-gray-400"
      >
        3
      </div>
      <div
        class="hidden"
      />
    </div>
    <div
      class="tiger-step-content ml-4 flex-1"
    >
      <div
        class="tiger-step-title font-medium transition-colors duration-200 text-base text-gray-400 "
      >
        Step 3
      </div>
      <div
        class="tiger-step-description mt-1 transition-colors duration-200 text-sm text-gray-400"
      >
        Third step
      </div>
    </div>
  </div>
</div>
`;
